--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -37,7 +37,7 @@
                 </li>
                     <li><a href="">Red acceso</a></li>
                     <li><a href="">Operacion CLC</a></li>
-                    <li><a href="">Repuestos</a></li>
+                    <li><a href="file:///C:/PRACTICA%20HTML%20CSS/repuestos.html"target="_blank">Repuestos</a></li>
                 </ul>
             </li>
             <li><a href="">Contacto</a></li>
